[package]
name = "programming-rust-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
